add quick fixes

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 ---
 menu_title: Home
+title: Home
 layout: default
 order: 1
 what_we_do:
   - title: Decentralized web projects
     description: We build decentralized web protocols (see our <a href="https://distributed.press/">Distributed Press initiative</a>) and contribute to distributed ledger and blockchain-based projects. Hypha believes peer-to-peer technologies will transform traditional digital collaboration.
-  - title: Capacity Development
+  - title: Capacity development
     description: "Capacity development is context dependent: we collaborate to understand where you are and where you need to go. If you’re a co-operative or a collective, Hypha has the lived experience and technical expertise to help you flourish."
   - title: Governance guidance
     description: We’re a co-op, so we know about the intricacies of working in a coordinated and democratic way. Hypha advises on decentralized governance challenges, and helps cultivate community ownership strategies.
@@ -16,7 +17,7 @@ values:
     description: We strive to be clear and direct in our communication with each other and those with whom we collaborate. We endeavour to gracefully accept, and act on, feedback when it is given.
   - title: Intersectionality
     description: We recognize, and work across, differences. We acknowledge the ongoing history of oppression and marginalization in our society and workplaces, and strive for Hypha to be a safe harbour to all. 
-  - title: Self-Agency
+  - title: Self-agency
     description: We choose the projects we work on. We are committed to upholding the financial security of our members and collaborators by fairly valuing the work we do.
   - title: Solidarity
     description: We serve our clients, members, neighbours, and the co-operative movement the world over. Hypha embodies the <a href="https://www.ica.coop/en/cooperatives/cooperative-identity">co-operative values</a> and seeks change that strengthens our communities and nurtures our planet.
