--- a/work.html
+++ b/work.html
@@ -37,7 +37,7 @@ order: 3
             </div>
             <h2 class="f3 sans-serif accent">{{ work.title }}</h2>
             <div 
-              class="mb2 f4 lh-copy pointer"
+              class="mb2 f4 lh-copy "
               data-excerpt='{{ work.excerpt | markdownify }}'
               data-content='{{ work.content | markdownify }}'
               data-types='<p>Keywords: <em>{% for type in work.work-type %}{{type}}; {% endfor %}</em></p>'
@@ -48,7 +48,7 @@ order: 3
             <p>
             {{ work.excerpt | markdownify }}
             </p>
-          <p class="mv0 link accent">[read more]</p>
+          <p class="mv0 link accent pointer">[read more]</p>
         </div>
             <!-- <div class="">
               {% for work-type in work.work-type %}
@@ -68,10 +68,10 @@ order: 3
       const el = document.getElementById(id);
       let toggled = document.getElementById(id).dataset.toggled;
       if (toggled == "true") {
-        el.innerHTML = excerpt + "<p class='mv0 link accent'> [read more] </p>";
+        el.innerHTML = excerpt + "<p class='mv0 link accent pointer'> [read more] </p>";
         el.dataset.toggled = false;
       } else {
-        el.innerHTML = content + types + "<p class='mv0 link accent'> [read less] </p>";
+        el.innerHTML = content + types + "<p class='mv0 link accent pointer'> [read less] </p>";
         el.dataset.toggled = true;
       }
     }
