--- a/dripline.html
+++ b/dripline.html
@@ -17,7 +17,10 @@ order: 4
         >
           {{ page.title }}
         </h3>
-        <div class="f3 measure-wide lh-copy mb0">
+        <div class="f3 measure-wide dark-gray lh-copy mb0">
+          <p class="f3">
+          This is the place for our collective writing ranging from short posts, to interviews, design retrospectives, and essays. We publish on a (mostly) monthly schedule. 
+          </p>
           <p class="f4">
             <em>
               A dripline signifies the area under the outermost branches of a
@@ -31,9 +34,6 @@ order: 4
               >
               between worlds where interesting and productive things happen.
             </em>
-          </p>
-          <p>
-          This is the place for our collective writing ranging from short posts, to interviews, design retrospectives, and essays. We publish on a (mostly) monthly schedule. 
           </p>
         </div>
       </div>
