--- a/people.html
+++ b/people.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: People
-excerpt: "A dripline signifies the area under the outermost branches of a tree. It's this interface between worlds where interesting and productive things happen."
+excerpt: "As a non-profit worker co-operative, Hypha strives to cultivate collective growth and meaningful livelihoods through learning and building digital technologies together."
 menu_title: People
 order: 2
 ---
