left align work-projects

--- a/work.html
+++ b/work.html
@@ -27,7 +27,7 @@ order: 3
 <div class="flex flex-wrap justify-left mb4 pv4">
     {% assign works = site.work | sort: 'order' %}
     {% for work in works %}
-        <div class="w-33-l w-50-m w-100-s flex-column justify-left items-left center mb4 tl  pr5-l pl3-m pr3-m">
+        <div class="w-33-l w-50-m w-100-s flex-column justify-left items-left mb4 tl pr5-l pl3-m pr3-m">
             <div class="relative mb4">
 
             <img class="relative" src="/assets/images/logos/logo-background.jpg" alt="logo"></img>
