Sort by recency, link to testnets repo

--- a/cosmos.html
+++ b/cosmos.html
@@ -5,7 +5,7 @@ excerpt: Testing
 permalink: '/doescosmos'
 ---
 
-{% assign posts = site.cosmos %}
+{% assign posts = site.cosmos | reverse %}
 
 <section class="mt4 ph3 pl5-l ">
     <header class="">
