Ensure consistent permalink structure for cosmos collection
- Update the `permalink` setting for the `cosmos` collection in `_config.yml` to include a trailing slash.
- Adjust the permalink in `cosmos.html` to ensure the cosmos index page also has a consistent URL structure with a trailing slash.

This change resolves internal linking issues and provides consistent URL structures for the entire `cosmos` collection.

--- a/cosmos.html
+++ b/cosmos.html
@@ -2,7 +2,7 @@
 layout: default
 title: Hypha Does Cosmos
 excerpt: Testing
-permalink: '/doescosmos'
+permalink: '/doescosmos/'
 ---
 
 {% assign posts = site.cosmos | reverse %}
