Add social media card images to Dripline, People, and Work pages

--- a/people.html
+++ b/people.html
@@ -2,6 +2,7 @@
 layout: default
 title: People
 excerpt: "As a non-profit worker co-operative, Hypha strives to cultivate collective growth and meaningful livelihoods through learning and building digital technologies together."
+image: "/assets/images/social/people.webp"
 menu_title: People
 order: 2
 ---
