--- a/work.html
+++ b/work.html
@@ -2,6 +2,7 @@
 layout: default
 title: Work
 excerpt: "Hypha is a word from Ancient Greek meaning 'web' (plural hyphae); referring to one of the threads that make up the mycelium of a fungus."
+image: "/assets/images/social/work.webp"
 menu_title: Work
 order: 3
 ---
