--- a/dripline.html
+++ b/dripline.html
@@ -2,6 +2,7 @@
 layout: default
 title: Dripline
 excerpt: "A dripline signifies the area under the outermost branches of a tree. It's this interface between worlds where interesting and productive things happen."
+image: "/assets/images/social/dripline.webp"
 menu_title: Dripline
 order: 4
 ---
