--- a/index.html
+++ b/index.html
@@ -4,29 +4,25 @@ title: Home
 layout: default
 order: 1
 what_we_do:
-  - title: Decentralized web projects
-    description: We build decentralized web protocols (see our <a href="https://distributed.press/">Distributed Press initiative</a>) and contribute to distributed ledger and blockchain-based projects. Hypha believes peer-to-peer technologies will transform traditional digital collaboration.
-  - title: Capacity development
-    description: "Capacity development is context dependent: we collaborate to understand where you are and where you need to go. If you’re a co-operative or a collective, Hypha has the lived experience and technical expertise to help you flourish."
-  - title: Governance guidance
-    description: We’re a co-op, so we know about the intricacies of working in a coordinated and democratic way. Hypha advises on decentralized governance challenges, and helps cultivate community ownership strategies.
-values:
-  - title: Curiosity
-    description: We embrace diverse perspectives, and approach our work with wonder and openness. We move thoughtfully and joyfully toward the futures we imagine.
-  - title: Honesty
-    description: We strive to be clear and direct in our communication with each other and those with whom we collaborate. We endeavour to gracefully accept, and act on, feedback when it is given.
-  - title: Intersectionality
-    description: We recognize, and work across, differences. We acknowledge the ongoing history of oppression and marginalization in our society and workplaces, and strive for Hypha to be a safe harbour to all. 
-  - title: Self-agency
-    description: We choose the projects we work on. We are committed to upholding the financial security of our members and collaborators by fairly valuing the work we do.
-  - title: Solidarity
-    description: We serve our clients, members, neighbours, and the co-operative movement the world over. Hypha embodies the <a href="https://www.ica.coop/en/cooperatives/cooperative-identity">co-operative values</a> and seeks change that strengthens our communities and nurtures our planet.
+  - title: Interchain
+    description: As core contributors to the Cosmos ecosystem, we've been building products and programs for the Interchain since 2021 
+  - title: Data Provenance
+    description: We use applied cryptography to help institutions protect the truth by preserving data integrity and trust
+  - title: Co-Creation Lab
+    description: Boundary-pushing arts, culture, and activist organizations come to us to make their digital visions a reality
+our_services:
+  - title: Discovery and design
+    description: We take a human-centered approach to understanding client needs, laying strategic foundations, and making actionable plans
+  - title: Software development
+    description: We offer full-service development for any stage of tech maturity, from prototyping and MVPs to long-term iterative development
+  - title: On-going management
+    description: We don’t just build tech, we build systems — and help run the teams, processes, communications, and user relationships that make them function
 ---
 {%- include sections.html path="about.html" class="" -%}
 {%- include sections.html path="what-we-do.html" class="" -%}
-{%- include sections.html path="work-preview.html" class="" -%}
-{%- include sections.html path="who-we-are.html" class="" -%}
 {%- include sections.html path="our-values.html" class="" -%}
+{%- include sections.html path="our-services.html" class="" -%}
+{%- include sections.html path="who-we-are.html" class="" -%}
 {%- include sections.html path="work-with-us.html" class="mv5" -%}
   <!-- <script src="{{ base.url | prepend: site.url }}/assets/js/index-items-list.js" defer></script> -->
   <script>
