--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@ layout: default
 order: 1
 what_we_do:
   - title: Interchain
-    description: As core contributors to the Cosmos ecosystem, we've been building products and programs for the Interchain since 2021 
+    description: As core contributors to the Cosmos ecosystem, we've been building products and programs for the Interchain since 2021. 
   - title: Data Provenance
-    description: We use applied cryptography to help institutions protect the truth by preserving data integrity and trust
+    description: We use applied cryptography to help institutions protect the truth by preserving data integrity and trust.
   - title: Co-Creation Lab
-    description: Boundary-pushing arts, culture, and activist organizations come to us to make their digital visions a reality
+    description: Boundary-pushing arts, culture, and activist organizations come to us to make their digital visions a reality.
 our_services:
   - title: Discovery and design
-    description: We take a human-centered approach to understanding client needs, laying strategic foundations, and making actionable plans
+    description: We take a human-centered approach to understanding client needs, laying strategic foundations, and making actionable plans.
   - title: Software development
-    description: We offer full-service development for any stage of tech maturity, from prototyping and MVPs to long-term iterative development
+    description: We offer full-service development for any stage of tech maturity, from prototyping and MVPs to long-term iterative development.
   - title: On-going management
-    description: We don’t just build tech, we build systems — and help run the teams, processes, communications, and user relationships that make them function
+    description: We don’t just build tech, we build systems — and help run the teams, processes, communications, and user relationships that make them function.
 ---
 {%- include sections.html path="about.html" class="" -%}
 {%- include sections.html path="what-we-do.html" class="" -%}
