--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ what_we_do:
   - title: Interchain
     description: As core contributors to the Cosmos ecosystem, we've been building products and programs for the Interchain since 2021. 
   - title: Data Provenance
-    description: We use applied cryptography to help institutions protect the truth by preserving data integrity and trust.
+    description: We enable decentralized trust models and equitable AI innovations rooted in multistakeholder governance and applied cryptography.
   - title: Co-Creation Lab
     description: Boundary-pushing arts, culture, and activist organizations come to us to make their digital visions a reality.
 our_services:
