Update excerpt for cosmos.html

--- a/cosmos.html
+++ b/cosmos.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Hypha Does Cosmos
-excerpt: Testing
+excerpt: "Hypha writes about our work in the Cosmos ecosystem."
 permalink: '/doescosmos/'
 ---
 
