--- a/work.html
+++ b/work.html
@@ -41,39 +41,50 @@ order: 3
           {{ practice.description }}
         </p>
       </div>
+      <div class="flex flex-wrap">
+        {% assign works = matching_practice_area.first.items | sort: 'order' %}
+        {% for work in works %}
+       
+          <div class="w-33-l w-50-m w-100-s flex-column justify-left items-left mb4 tl pr5-l pl3-m pr3-m">
             <div class="relative mb4">
-
-            <img class="relative" src="/assets/images/logos/logo-background.jpg" alt="logo"></img>
-            {% if work.logo %}
-             <img class="absolute top-0 left-0" src="{{ work.logo }}" alt="logo"></img>
-            {% else %}
-             <p class="absolute top-0 left-0 tc mt5 w-100 white f1 v-mid"><b>{{ work.title }}</b></p> 
-            {% endif %}
+              <img class="relative" src="/assets/images/logos/logo-background.jpg" alt="logo"></img>
+              {% if work.logo %}
+                <img class="absolute top-0 left-0" src="{{ work.logo }}" alt="logo"></img>
+              {% else %}
+                <p class="absolute top-0 left-0 tc mt5 w-100 white f1 v-mid"><b>{{ work.title }}</b></p>
+              {% endif %}
             </div>
             <h2 class="f3 sans-serif accent">{{ work.title }}</h2>
-            <div 
-              class="mb2 f4 lh-copy "
-              data-excerpt='{{ work.excerpt | markdownify }}'
-              data-content='{{ work.content | markdownify }}'
-              data-types='<p>Keywords: <em>{% for type in work.work-type %}{{type}}; {% endfor %}</em></p>'
-              data-toggled="false"
+            <div
+              class="mb2 f4 lh-copy"
               id="{{ work.title }}"
-              onclick="toggleBio(this.id, this.dataset.excerpt, this.dataset.content, this.dataset.types);"
             >
-            <p>
-            {{ work.excerpt | markdownify }}
-            </p>
-          <p class="mv0 link accent pointer">[read more]</p>
-        </div>
-            <!-- <div class="">
-              {% for work-type in work.work-type %}
-              <p class="accent mv2">
-              {{ work-type }}
-              </p>
-              {% endfor %}
-            </div> -->
-        </div>
-    {% endfor %}
+              <div 
+                class="project-content"
+                data-excerpt="{{ work.excerpt | escape }}"
+                data-content="{{ work.content | escape }}"
+                data-types='<p>Keywords: <em>{% for type in work.work-type %}{{type}}; {% endfor %}</em></p>'
+                data-toggled="false"
+                >
+                {{ work.excerpt | markdownify }}
+              </div>
+                {% unless work.excerpt == work.content %}
+                  <p class="mv0 link accent pointer underline-hover w-fit"
+                    tabindex="0"
+                    role="button"
+                    aria-expanded="false"
+                    onclick="expandContent(this)"
+                    onkeydown="handleKeydown(event, this)"
+                  >
+                    [read more]
+                  </p>
+                {% endunless %}
+              </div>
+            </div>
+        {% endfor %}
+      </div>
+    {% endif %}
+  {% endfor %}
 </div>
 </section>
 <script>
