Add link to Furtherfield case study

--- a/co-creation-lab.html
+++ b/co-creation-lab.html
@@ -122,7 +122,7 @@ order: 5
                   </em>
                 </p>
                 <p class="pb3 f3 lh-copy measure-wide">
-                  Read more about our work with Furtherfield.
+                  Read more about <a class="accent link underline-hover" href='/co-creation-lab/furtherfield'>our work with Furtherfield</a>.
                 </p> 
               </div>
             </div>
