--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ what_we_do:
     description: We enable decentralized trust models and equitable AI innovations rooted in multistakeholder governance and applied cryptography.
   - title: Co-Creation Lab
     description: Boundary-pushing arts, culture, and activist organizations come to us to make their digital visions a reality.
+    slug: "co-creation-lab"
 our_services:
   - title: Discovery and design
     description: We take a human-centered approach to understanding client needs, laying strategic foundations, and making actionable plans.
