Add "Go back" link to Co-Creation Lab's practice page

--- a/co-creation-lab/furtherfield.html
+++ b/co-creation-lab/furtherfield.html
@@ -55,32 +55,6 @@ excerpt: "Putting the “public” back in “public art” in one North London 
     “Without Hypha, we would’ve been at the end of the road and had to put the project to bed.”
 </h4>
 
-<p class="pb3 f3 lh-copy measure-wide">
-    For CultureStake’s first iteration, Furtherfield commissioned artist and developer Sarah Friend and later brought in fellow co-op Common Knowledge to work on its design and frontend. But when it came to the more challenging backend work of connecting the app to the blockchain, both Sarah and the firm recommended Hypha. At first, Furtherfield was nervous about handing the project to a new partner. Says Ruth, ”We were a little bit freaked out because we didn’t have a bunch of extra funding if things went wrong. We had to be sure this would work.” But then Furtherfield met with the Hypha team. “They asked really good questions. That’s how we came to feel, ‘Yes, this is doable.’”
-</p>
-<p class="pb3 f3 lh-copy measure-wide">
-    As the work began, Ruth loved Hypha’s rigorous approach: “After every meeting, Hypha’s notes would reflect back to us everything we described along with anything that was still unknown, that they wanted additional information on, or had questions or comments about.” Through this process, Ruth says, “They kept asking questions until they knew everything. This made us feel very secure because we could see all the remaining gaps.” In addition to making the app functional — making the frontend do what it was intended to do — as planned, Hypha helped improve the design of CultureStake’s frontend as well. 
-</p>
-<blockquote class="f3 measure mb5">
-    <em>
-    “They kept asking questions until they knew everything. This made us feel very secure because we could see all the remaining gaps.”
-</em>
-</blockquote>
-<p class="pb3 f3 lh-copy measure-wide">
-    As Furtherfield “turned the gallery inside out,” bringing art from the gallery to the park, they used CultureStake to cede creative control to the people. Calling the project People’s Park Plinth, Furtherfield commissioned a series of small extended reality artworks. Finsbury’s 50,000 visitors a week could then use CultureStake to scan QR codes and view the works throughout the park. They then could use CultureStake to vote on which piece they wanted to see realized at full scale. As part of CultureStake’s design, votes cast from within the park were weighted higher than ones made from outside it. That year, Furtherfield tripled its local engagement and heard feedback like, “I’ve been talking about this with my friends for months.”
-</p>
-<p class="pb3 f3 lh-copy measure-wide">
-    When asked about her overall experience working with Hypha, Ruth responded, “I trusted them. I always felt like we were working with good people. Without Hypha, we would’ve been at the end of the road and had to put the project to bed.”
-</p>
-<h4 class="f3 measure-wide mb0">
-    Confirming the usefulness and untapped potential of blockchain for art and culture
-</h4>
-<p class="pb3 f3 lh-copy measure-wide">
-    Because of recent changes to the Furtherfield team, Ruth is now seeking funding to support CultureStake’s continued growth. Even though CultureStake’s future is uncertain, Ruth says the project confirmed for her the “massive and still underexplored value quadratic voting has in the cultural setting.”
-</p>
-<p class="pb3 f3 lh-copy measure-wide">
-    Reflects Ruth, “In trying to make a connection with our local community to understand our shared interests, CultureStake allowed for a radical inversion of how you usually run a gallery. It responded to a pragmatic issue with COVID, but also the desire for more authentic relationships with the public around us.” 
-</p>
-<p class="pb3 f3 lh-copy measure-wide">
-    “Testing all the promises of democratization in the blockchain space against reality” was something Ruth had been wanting to do ever since Furtherfield board member Rhea Myers started “issuing provocations on decentralized autonomous organizations that were impossible to ignore, long before the NFT boom.” To her, blockchain may not be essential to making cultural democracy happen. But Ruth feels it’s important to keep the spirit of DIY experimentation alive for this generation of the internet so blockchain isn’t only used for financial extraction. Hypha’s Co-Creation Lab gives organizations like Furtherfield the expertise they need to safely explore these possibilities.
-</p>
+      <p class="pb3 f3 lh-copy measure-wide">
+        Go back to the <a href="../">Co-Creation Lab's practice page</a>
+      </p>
