--- a/co-creation-lab/hek.html
+++ b/co-creation-lab/hek.html
@@ -213,6 +213,9 @@ excerpt: "Helping Basel’s HEK build digital community with the world’s first
           be beautiful, especially for communities.”
         </em>
       </blockquote>
+      <p class="pb3 f3 lh-copy measure-wide">
+        Go back to the <a href='../'>Co-Creation Lab's practice page</a>
+      </p>
     </div>
   </div>
 </section>
