--- a/work.html
+++ b/work.html
@@ -40,6 +40,9 @@ order: 3
         </h2>
         <p class="measure-wide mb4">
           {{ practice.description }}
+          {% if practice.slug %}
+            <a href="/{{ practice.slug }}/" class="accent link underline-hover">Read more</a>
+        {% endif %}
         </p>
       </div>
       <div class="flex flex-wrap">
